--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,6 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 pie_chart.iml
+
+# Include the gradle wrapper jar
+!*/gradle-wrapper.jar
