--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,8 @@ fabric.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-pie_chart.iml
+*.iml
+*.ipr
 
 # Include the gradle wrapper jar
 !gradle/wrapper/gradle-wrapper.jar
